<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_img2"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_above="@id/card_view"
        android:padding="28dp">

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="28dp"
        android:layout_marginBottom="-20dp"
        android:id="@+id/card_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:orientation="vertical"
            android:padding="28dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_loginTitle"
                android:textColor="@color/purple"
                android:textSize="32sp"
                android:textAlignment="center"
                android:textStyle="bold"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/person_edittext"
                android:drawablePadding="12dp"
                android:hint="@string/string_email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:padding="10dp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/password_edittext"
                android:drawablePadding="12dp"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="10dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- Role -->
                <RadioGroup
                    android:id="@+id/roleRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="16dp">

                    <RadioButton
                        android:id="@+id/radio_patient"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Patient"
                        android:checked="true" />

                    <RadioButton
                        android:id="@+id/radio_doctor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Doctor" />
                </RadioGroup>

            </RelativeLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/string_login"
                android:id="@+id/loginButton"
                app:strokeColor="@color/Btn_color"
                android:backgroundTint="@color/Btn_color"
                app:cornerRadius="32dp"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signupRedirect"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:text="@string/login_signup_hint" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_forgotPassword"
                android:id="@+id/forgotPassword"
                android:textAlignment="center"
                android:textColor="@color/black"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>