<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_img2"
    tools:context=".SignupActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_above="@id/card_view"
        android:padding="28dp">

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="28dp"
        android:layout_marginBottom="-20dp"
        android:id="@+id/card_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_signupTitle"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textAlignment="center"
                android:textStyle="bold"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>

            <EditText
                android:id="@+id/nameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="12dp"
                android:hint="Full Name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="10dp" />

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="12dp"
                android:hint="@string/string_email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:padding="10dp" />

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="12dp"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="10dp" />

            <EditText
                android:id="@+id/confirmPasswordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="12dp"
                android:hint="Confirm Password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="10dp" />

            <EditText
                android:id="@+id/contactInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="12dp"
                android:hint="Mobile Number"
                android:inputType="number"
                android:minHeight="48dp"
                android:padding="10dp" />

            <EditText
                android:id="@+id/addressInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="12dp"
                android:hint="Address"
                android:inputType="textPostalAddress"
                android:minHeight="48dp"
                android:padding="10dp" />

            <EditText
                android:id="@+id/specializationInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="12dp"
                android:hint="Specialization"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="10dp"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/qualificationInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="12dp"
                android:hint="Qualification"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="10dp"
                android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/availabilityLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Select Availability"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:layout_gravity="center" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/startTimeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Select Start Time"
                        android:textSize="16sp"
                        android:padding="10dp"
                        android:background="@drawable/input_box_background" />

                    <TextView
                        android:id="@+id/endTimeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Select End Time"
                        android:textSize="16sp"
                        android:padding="10dp"
                        android:background="@drawable/input_box_background"
                        android:layout_marginStart="20dp" />
                </LinearLayout>

            </LinearLayout>



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- Role -->
                <RadioGroup
                    android:id="@+id/roleRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="16dp">

                    <RadioButton
                        android:id="@+id/radio_patient"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Patient"
                        android:checked="true" />

                    <RadioButton
                        android:id="@+id/radio_doctor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Doctor" />
                </RadioGroup>

            </RelativeLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/string_sign_up"
                android:textSize="20sp"
                android:id="@+id/signupButton"
                app:cornerRadius="32dp"
                app:strokeColor="@color/Btn_color"
                android:backgroundTint="@color/Btn_color"
                />

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loginRedirect"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:text="@string/signup_login_hint" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>